fixed mobile colours and spacing

--- a/src/style/components/_buttons.scss
+++ b/src/style/components/_buttons.scss
@@ -34,8 +34,8 @@
   // Responsive Button hero style
   @include respond(phone) {
     background-image: none;
-    border: 2px solid $secondary-color;
-    -webkit-text-fill-color: $secondary-color;
+    border: 2px solid $quirky-highlight;
+    -webkit-text-fill-color: $quirky-highlight;
   }
 
   &::after {
@@ -51,7 +51,7 @@
     text-decoration: none;
     // Responsive Button hover hero style
     @include respond(phone) {
-      -webkit-text-fill-color: $secondary-color;
+      -webkit-text-fill-color: $quirky-highlight;
     }
 
     &::after {
@@ -70,7 +70,7 @@
   }
 
   &:hover {
-    color: $secondary-color;
+    color: $quirky-highlight;
     text-decoration: none;
 
     &::after {
