--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -33,21 +33,43 @@
 
     @include respond(tab-land) {
       font-size: 4rem;
+      margin-bottom: 1.2rem;
     }
     @include respond(tab-port) {
       font-size: 3.6rem;
       text-align: center;
+      margin-bottom: 1.2rem;
     }
     @include respond(phone) {
       font-size: 3.5rem;
       line-height: 1.5;
+      margin-bottom: 1.2rem;
     }
     @include respond(phone-xs) {
       font-size: 2.8rem;
+      margin-bottom: 1.2rem;
     }
   }
   .hero-subtitle {
-    font-size: $mid-font-size+2
+    font-size: 5.6rem;
+    font-weight: 700;
+    margin-bottom: 3.2rem;
+    text-align: center;
+
+    @include respond(tab-land) {
+      font-size: 3rem;
+    }
+    @include respond(tab-port) {
+      font-size: 2.6rem;
+      text-align: center;
+    }
+    @include respond(phone) {
+      font-size: 2.5rem;
+      line-height: 1.5;
+    }
+    @include respond(phone-xs) {
+      font-size: 1.8rem;
+    }
   }
 
   .hero-cta {
